static/css/home.css
@font-face {
    font-family: Imperator;
    src: url('../resources/fonts/Imperator.ttf');
}


main {
    height: 100vh;
    overflow: hidden;
    cursor: crosshair;
}

body {
    margin: 0px;
    background-color: #051207;
}

header {
    display: none;
}

h1 {
    margin: 0px;
}

h2 {
    margin: 0px;
    font-size: 10pt;
}

ul {
    margin-top: 3px;
    margin-bottom: 3px;
    padding: none;
    padding-left: 1.5em;
}

#imagewrapper {

    width: 0%;
    height: 0%;
    justify-items: centre;
    align-content: centre;

}

a {
    text-decoration: none
}

#backgroundimage {

    width: 100vw;
    z-index: 1;
    background-size:     contain;                      /* <------ */
    background-repeat:   repeat;
    background-position: center center;              /* optional, center the image */

}



/* MAIN CONTENT */

#content {

    z-index: 2;
    display: flex;
    width: 100%;
    cursor: none;
}


    .xpwindow {
        cursor: crosshair;
        width: fit-content;
        background-color: #BFB294;
        border: 1px solid black;
        border-top: 1px solid white;
        border-left: 1px solid white;
        height: fit-content;
        padding: 2px;
        font-size: 9pt;
        position: absolute;
        z-index: 1;
        box-shadow: 5px 5px 5px #00000050;
    }

        .xpwindowheader {
            color: white;
            padding: 2px;
            font-size: 8pt;
            width: calc(100% - 4px);
            height: fit-content;
            background: linear-gradient(to right, #153d1a, #182e1b);
            display: flex;
            cursor: grab;
            font-family: Arial;
        }


            .xpwindowheader:active {
                cursor: grabbing;
            }

            .headercolumn1 {
                width: 80%;
                display: flex
            }


            .xpwindowheader img {
                height: 12px;
                margin-right: 2px;
            }

        .xpwindowcontent {
            margin-top: 2px;
            height: fit-content;
            max-height: 90vh;
            overflow: auto
            /* Hide scrollbar on Windows/Chrome/Edge */
            scrollbar-width: thin; /* Firefox */
            scrollbar-color: transparent transparent; /* Firefox */
;
            padding: 4px;
            background-color: #fff9ed;
            border: 1px solid white;
            border-top: 1px solid black;
            border-left: 1px solid black;
            min-height: 20px;
            min-width: 200px;
            resize: both;
        }
            .xpwindowcontent::-webkit-scrollbar {
                width: 6px;
                height: 6px;
            }

            .xpwindowcontent::-webkit-scrollbar-thumb {
                background-color: transparent;
            }

            .xpwindowcontent::-webkit-scrollbar-track {
                background-color: transparent;
            }


        /* INDIVIDUAL WINDOW STYLING */

        .windowterminalcontent {
            background-color: black;
            font-family: 'Courier New', monospace !important;
        }

        .windowaboutcontent {
            width: 250px;
            height: 200px;
        }

        .windowguestbookcontent {
            padding: 0px;
        }

        .windowannouncementcontent {
            width: 381px;
        }

        .windowquotecontent {
            width: 200px;
            height: fit-content;
            min-height: none;
        }

        .windowquotecontent a {
            color: black;
            text-decoration: none;
            font-style: italic;
        }

        .windowmousecontent {
            min-width: fit-content !important;
            min-height: fit-content !important
        }

        .windowmouse {
            z-index: 0
        }

        .windowisopodcontent {
            width: 50px;
            height: auto;
            resize: horizontal;
            min-width: fit-content !important;
            min-height: fit-content !important;
        }

        .windowbookcasecontent {
            width: 250px;
            padding: 2px;
            height: 350px;
            border: none;
            min-width: 100px;
        }

        .windowbookreview {
            z-index: 2;
            display: none;
        }

        .windowbookreviewcontent {
            width: 250px;
            height: 200px;
            padding: 6px;
        }

        .windowguestbookcontent {

            width: 400px;
            resize: horizontal;
        }

        /* FOLDERS */

        #folderwrapper {
            display: flex;
            width: 100%;
            height: 100%;
            flex-wrap: wrap;
        }
        .folderfile {
            width: 45px;
            height: auto;
            display: flex;
            flex-direction: column;
            align-items: center;
            margin: 4px;
        }

        .foldericon {
            width: auto;
            height: 35px;
            margin-bottom: 1px;
            cursor: pointer;
        }

        .folderlabel {
            font-size: 6pt;
            width: 100%;
            overflow-wrap: break-word;
            text-align: center;
        }

